--- a/package.json
+++ b/package.json
@@ -26,17 +26,24 @@
 		"@types/node": "^20.14.9",
 		"dotenv": "^16.4.5",
 		"nodemon": "^3.1.4",
+		"pre-commit": "^1.2.2",
 		"rimraf": "^5.0.7",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.2"
 	},
 	"scripts": {
-		"build": "npx tsc",
+		"build": "rimraf dist && tsc",
+		"ts.check": "tsc --project tsconfig.json",
+		"add-build": "git add dist",
 		"start": "node ./dist/index.js",
 		"dev": "nodemon ./index.ts",
 		"prisma:migrate": "npx prisma migrate dev",
 		"prisma:studio": "npx prisma studio",
-		"clean-build": "rimraf dist",
 		"build:clean": "yarn clean-build && yarn build"
-	}
+	},
+	"pre-commit": [
+      "ts.check",
+      "build",
+      "add-build"
+  	]
 }
