--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/body-parser": "^1.19.5",
 		"@types/connect": "^3.4.38",
 		"@types/cors": "^2.8.17",
+		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.21",
 		"@types/http-errors": "^2.0.4",
 		"@types/http-server": "^0.12.4",
@@ -44,5 +45,5 @@
 		"ts.check",
 		"build",
 		"add-build"
-  	]
+	]
 }
