--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,39 @@
 {
   "compilerOptions": {
+    "target": "es2016",
     "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "resolveJsonModule": true,
-    "incremental": true
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,  /* Enable import of JSON modules */
+    "incremental": true,
+    "removeComments": true,
   },
-  "include":[ 
+  "include": [
     "./**/*",
     "./**/**/*.json"
   ]
 }
+// {
+//   "compilerOptions": {
+//     "module": "commonjs",
+//     "declaration": true,
+//     "removeComments": true,
+//     "emitDecoratorMetadata": true,
+//     "experimentalDecorators": true,
+//     "allowSyntheticDefaultImports": true,
+//     "target": "es2017",
+//     "sourceMap": true,
+//     "outDir": "./dist",
+//     "baseUrl": "./",
+//     "resolveJsonModule": true,
+//     "incremental": true
+//   },
+//   "include":[ 
+//     "./**/*",
+//     "./**/**/*.json"
+//   ]
+// }
