--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"build": "rimraf dist && tsc",
 		"ts.check": "tsc --project tsconfig.json",
 		"add-build": "git add dist",
-		"start": "node ./index.js",
+		"start": "node ./dist/index.js",
 		"dev": "nodemon ./index.ts",
 		"prisma:migrate": "npx prisma migrate dev",
 		"prisma:studio": "npx prisma studio"
